# qgis-plugin

./: .gitignore  CHANGELOG.md  README.md  build.ps1  build.py  build.sh  pip_installer.py  pyproject.toml  pythonlog.txt  vendor_deps.py
.github/workflows/: release.yml
tests/: test_basic.py  test_ci.py
virtughan_qgis/: bootstrap.py  dependency_versions.py  installer_dialog.py  main_plugin.py  metadata.txt  pip_installer.py
virtughan_qgis/common/: aoi.py  common_form.ui  common_logic.py  geocoding_widget.py  hub_dialog.py  map_setup.py  results_widget.py  scene_preview_dialog.py
virtughan_qgis/engine/: engine_form.ui  engine_logic.py  engine_widget.py
virtughan_qgis/extractor/: extractor_form.ui  extractor_logic.py  extractor_widget.py
virtughan_qgis/tiler/: api.py  tiler_form.ui  tiler_widget.py
