[project]
name = "virtughan-qgis-plugin"
version = "1.0.0"
description = "QGIS plugin for Sentinel-2 workflows with STAC search, map preview, band extraction, and formula-based spectral analysis. It uses Engine, Extractor and Tiler from VirtuGhan"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Upendra Oli", email = "upendra.oli59@gmail.com"},
    {name = "Kshitij Raj Sharma"},
    {name = "Sahar Mohamed"},
]
keywords = ["qgis", "plugin", "sentinel-2", "stac", "ndvi", "remote-sensing", "geospatial", "raster", "timeseries"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "virtughan>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/virtughan/qgis-plugin"
Repository = "https://github.com/virtughan/qgis-plugin"
Issues = "https://github.com/virtughan/qgis-plugin/issues"

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.qgis-plugin]
name = "VirtuGhan QGIS Plugin"
description = "Sentinel-2 STAC search, preview, extraction, and spectral analysis in QGIS"
about = "VirtuGhan helps you discover and process Sentinel-2 imagery directly in QGIS. Use Tiler for fast map preview, Extractor to download selected bands for your AOI/date/cloud filters, and Engine to run spectral formulas such as NDVI and generate analysis rasters. Matching scene footprints can be previewed before processing, and outputs are saved locally and loaded into your QGIS project."
qgis_minimum_version = "3.22"
category = "Analysis"
icon = "static/images/virtughan-logo.png"
experimental = false
deprecated = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_type = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
]
